alpm-types/src/version/snapshots/base::invalid_pkgver@case_2.snap
---
source: alpm-types/src/version/base.rs
---
error: invalid character
 | 
 | foo-1
 |    ^ expected ASCII characters, except for ':', '/', '-', '<', '>', '=', or any whitespace characters
 | 
 = while parsing:
   alpm-pkgver: (-1)
   → invalid character
   → expected ASCII characters, except for ':', '/', '-', '<', '>', '=', or any whitespace characters
